fixed back and share alignment in gallery for mobile

--- a/interface/css/master.less
+++ b/interface/css/master.less
@@ -1267,6 +1267,16 @@ Soecialty Page
 	display:none;
 }
 
+.share {
+display: block;
+position: absolute;
+top: 15px;
+left: 10px;}
+}
+
+.back{
+	right:10px;
+	top:10px;
 }
 /************************************************************************************
 smaller than 560
